<resources>
    <string name="app_name">RoutineApp</string>
    <string name="loginPage">Login/SignUp</string>
    <string name="edityearbranch">Edit Year/Branch</string>
    <string name="addroutine">AddTimeTable</string>
    <string name="signout">Logout</string>
    <string name="subjectHint">Subject</string>
    <string name="teacherHint">Teacher</string>
    <string name="timeHint">Time</string>
    <string name="add">Add</string>
    <string name="messageHint">Message</string>
    <string name="sensMessage">Send</string>
    <string name="imageMessage">Image</string>
    <string name="nameHint">Name</string>
    <string name="account">Profile</string>
    <string name="menu_refresh">Refresh</string>
    <string name="cancel">No</string>
    <string name="done">Yes</string>
    <string name="setting">Settings</string>
    <string name="message">Do you want to Delete Chat?</string>
    <string name="addMessage">Create classroom code.</string>
    <string name="verifyMessage">Verify classroom code.</string>
    <string name="dialogTitle">My classRoom</string>
    <string name="responsibility">Role</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="firstyear">1</string>
    <string name="secondyear">2</string>
    <string name="thirdyear">3</string>
    <string name="fourthyear">4</string>
    <string name="cse">CSE</string>
    <string name="it">IT</string>
    <string name="starttime">From</string>
    <string name="endtime">To</string>
    <string name="me">ME</string>
    <string name="ee">EE</string>
    <string name="ce">CE</string>
    <string name="cr">CR</string>
    <string name="year">Year</string>
    <string name="teachingSubject">Teaching Subject</string>
    <string name="completeInfo">Enter Required Field/s.</string>
    <string name="msg">token message</string>
    <string name="absent">Ab</string>
    <string name="present">Pr</string>
    <string name="takeAttendance">Take Attendance</string>
    <string name="attendanceList">Attendance List</string>
    <string name="action">Warning</string>
    <string name="backgroundColor">BackgroundColor</string>
    <string name="weekRoutine">Week Routine</string>
    <string name="imageContentDesc">Image Content</string>
    <string name="full_name">Full Name</string>
    <string name="attendance_list">Attendance List</string>
    <string name="roll_number">Roll.</string>
    <string name="roll">Roll</string>
    <string name="ab_pr">Ab/Pr</string>
    <string name="private_room">Create private chat room</string>
    <string name="branchname">branchName</string>
    <string name="delete_subject">Delete subject</string>
</resources>