<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting">
    <TextView
        android:id="@+id/userRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/responsibility"/>
    <RadioGroup
        android:id="@+id/roleName"
        android:layout_toRightOf="@+id/userRole"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/teacherRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:onClick="roleClicked"/>
        <RadioButton
            android:id="@+id/crRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr"
            android:onClick="roleClicked"/>
        <RadioButton
            android:id="@+id/studentRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:onClick="roleClicked"/>
    </RadioGroup>
    <TextView
        android:id="@+id/teachingArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roleName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="Room detail for which you will add routine."/>
    <TextView
        android:id="@+id/yearName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teachingArea"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/year"/>
    <RadioGroup
        android:id="@+id/yearOnTeach"
        android:layout_toRightOf="@+id/yearName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/teachingArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/firstYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstyear"
            android:onClick="yearClicked"/>
        <RadioButton
            android:id="@+id/secondYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondyear"
            android:onClick="yearClicked"/>
        <RadioButton
            android:id="@+id/thirdYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdyear"
            android:onClick="yearClicked"/>
        <RadioButton
            android:id="@+id/fourthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourthyear"
            android:onClick="yearClicked"/>
    </RadioGroup>
    <TextView
        android:id="@+id/streamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yearOnTeach"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="Stream"/>
    <RadioGroup
        android:id="@+id/streamOnTeach"
        android:layout_toRightOf="@+id/streamName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/yearOnTeach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/cse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse"
            android:onClick="streamClicked"/>
        <RadioButton
            android:id="@+id/it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it"
            android:onClick="streamClicked"/>
        <RadioButton
            android:id="@+id/ee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ee"
            android:onClick="streamClicked"/>
        <RadioButton
            android:id="@+id/me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:onClick="streamClicked"/>
        <RadioButton
            android:id="@+id/ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ce"
            android:onClick="streamClicked"/>
    </RadioGroup>
    <TextView
        android:id="@+id/teachingSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/streamOnTeach"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/teachingSubject"/>
    <EditText
        android:id="@+id/subjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/teachingSubject"
        android:layout_below="@+id/streamOnTeach"
        android:paddingRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/teachingSubject"/>
    <Button
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjectName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/starttime"/>
    <Button
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/startTime"
        android:layout_below="@+id/subjectName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/endtime"/>
    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/endTime"
        android:layout_below="@+id/subjectName"
        android:paddingTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/link"
        android:text="Day"/>
</RelativeLayout>