<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:minHeight="65dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subjectHint"
                android:textSize="20sp"
                android:paddingRight="3sp"
                android:paddingLeft="4dp"
                android:textAppearance="@style/ThemeOverlay.AppCompat.Light"
                android:paddingEnd="3sp"
                android:paddingStart="4dp" />
            <TextView
                android:id="@+id/teacher"
                android:layout_below="@+id/subject"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:textSize="12sp"
                android:paddingLeft="7dp"
                android:text="@string/teacherHint"
                android:paddingStart="7dp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
        <TextView
            android:id="@+id/time"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="15sp"
            android:paddingTop="3dp"
            android:textColor="#000000"
            android:gravity="right"
            android:paddingRight="5dp"
            android:paddingLeft="10dp"
            android:text="@string/timeHint"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</RelativeLayout>
