<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".takeattendance">
    <LinearLayout
        android:id="@+id/linearLayoutData"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/roll"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/roll_number"
            android:textSize="20sp"
            android:textStyle="italic"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/nameHint"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/attendanceStatus"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/ab_pr"
            android:textSize="20sp"
            android:textStyle="italic"
            android:paddingLeft="3dp"
            android:paddingStart="3dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <ListView
        android:layout_below="@+id/linearLayoutData"
        android:id="@+id/studentAttendanceRecord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>