<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/superParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="256sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="9sp"
        android:orientation="vertical"
        android:background="@drawable/left_chat">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/receiver_chat_name"
                android:layout_gravity="left"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:fontFamily="sans-serif"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:hint="@string/nameHint"
                android:paddingStart="8dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
            <TextView
                android:id="@+id/receiver_chat_time"
                android:layout_gravity="right"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:fontFamily="sans-serif"
                android:hint="@string/timeHint"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/receiver_image_chat"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/logo"
            android:layout_marginStart="3dp"
            android:contentDescription="@string/imageContentDesc" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentRight="true"
        android:id="@+id/textLayout"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:minWidth="200sp"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageLayout"
        android:background="@drawable/right_chat"
        android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/receiver_chat_name2"
                android:layout_gravity="left"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:fontFamily="sans-serif"
                android:paddingTop="3dp"
                android:hint="@string/nameHint"
                android:paddingStart="8dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
            <TextView
                android:id="@+id/receiver_chat_time2"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:paddingTop="3dp"
                android:fontFamily="sans-serif"
                android:hint="@string/timeHint"/>
        </LinearLayout>
        <TextView
            android:id="@+id/receiver_text_chat"
            android:layout_width="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/messageHint"/>
    </LinearLayout>
</RelativeLayout>