<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/superParent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_alignParentRight="true"
        android:id="@+id/imageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="256sp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:background="@drawable/sender"
        android:layout_marginEnd="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sender_chat_time"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="15dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:fontFamily="sans-serif"
                android:hint="@string/timeHint"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/sender_image_chat"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            android:layout_marginStart="3dp"
            android:contentDescription="@string/imageContentDesc" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentRight="true"
        android:id="@+id/textLayout"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_marginRight="5dp"
        android:minWidth="200sp"
        android:layout_marginTop="10dp"
        android:paddingBottom="2dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/imageLayout"
        android:background="@drawable/sender">
        <TextView
            android:id="@+id/sender_text_chat"
            android:layout_width="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_gravity="right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:hint="@string/messageHint"/>
        <TextView
            android:id="@+id/senderer_chat_time2"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingTop="1dp"
            android:paddingBottom="2dp"
            android:fontFamily="sans-serif"
            android:hint="@string/timeHint"/>
    </LinearLayout>
</RelativeLayout>